# cpp_vcpkg_project

./: .clang-format  .clang-tidy  .cmake-format.yaml  .dockerignore  .gitignore  .gitlab-ci.yml  CMakeDarwinPresets.json  CMakeLinuxPresets.json  CMakeLists.txt  CMakePresets.json  CMakeWindowsPresets.json  CMakeWorkflowPresets.json  CMakeWorkflowPrestes.json  Features.cmake  Makefile  README.md  Taskfile.yml  cspell.config.yaml  gcovr.cfg  vcpkg.json
.devcontainer/: .dockerignore  Dockerfile  run.sh
.github/workflows/: auto-clang-format.yml  ci.yml
cmake/: AddTest.cmake  CPM.cmake
cmake/presets/: CMakeUnixPresets.json  CMakeWindowsPresets.json  CMakeWorkflowPresets.json
configured_files/: config.hpp.in
docs/: building.md  dependencies.md  docker.md
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
my_exe/: CMakeLists.txt  main.cpp
my_exe/include/my_exe/: helpers.hpp
my_exe/src/: main.cpp
my_exe/test/: CMakeLists.txt  tests.cpp
my_exe/test/constexpr/: CMakeLists.txt
my_header_lib/: CMakeLists.txt
my_header_lib/include/my_header_lib/: lib.hpp
my_header_lib/test/: CMakeLists.txt  tests.cpp
my_header_lib/test/constexpr/: CMakeLists.txt  constexpr_tests.cpp
my_header_lib/test/fuzz/: CMakeLists.txt  fuzz_tester.cpp
my_lib/: CMakeLists.txt
my_lib/include/my_lib/: lib.hpp
my_lib/src/my_lib/: lib.cpp
my_lib/test/: CMakeLists.txt  tests.cpp
my_lib/test/constexpr/: CMakeLists.txt  constexpr_tests.cpp
src/exe/: CMakeLists.txt  main.cpp
src/header_lib/: CMakeLists.txt
src/my_header_lib/: CMakeLists.txt
src/my_header_lib/include/my_header_lib/: lib.hpp
src/my_lib/: CMakeLists.txt
src/my_lib/include/my_lib/: lib.hpp
src/my_lib/src/my_lib/: lib.cpp
